--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14638,7 +14638,7 @@ a:active {
   margin: 0px;
   font-size: 36px;
   font-weight: 600;
-  color: var(--link-color);
+  color: #102958;
   line-height: 1.3;
 }
 .ddoc-single-post .entry-header .ddoc-single-post-meta li {
