--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14036,7 +14036,7 @@ dl dd a:hover {
   cursor: pointer;
 }
 .doc-nav-list li.wd-state-open > a {
-  color: #2579FF;
+  color: black;
 }
 .doc-nav-list li.wd-state-open > a > .wedocs-icon {
   transform: rotate(180deg);
