--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14640,6 +14640,8 @@ a:active {
   font-weight: 600;
   color: #102958;
   line-height: 1.3;
+  border-bottom: 1px solid lightgray;
+  margin-bottom: 30px;
 }
 .ddoc-single-post .entry-header .ddoc-single-post-meta li {
   display: inline-block;
