--- a/assets/css/ddoc-style.css
+++ b/assets/css/ddoc-style.css
@@ -299,7 +299,7 @@
 	color: #2579FF;
 }
 .ddoc-single-post .ddoc-page-content h1,.ddoc-single-post .ddoc-page-content h2,.ddoc-single-post .ddoc-page-content h3,.ddoc-single-post .ddoc-page-content h4,.ddoc-single-post .ddoc-page-content h5,.ddoc-single-post .ddoc-page-content h6{
-	color: #0e1133;
+	color: #08285B;
 }
 .wp-block-ddoc-block-zoomtext .btn-group button.active{
 	background: #2579FF;
