--- a/assets/css/ddoc-style.css
+++ b/assets/css/ddoc-style.css
@@ -533,7 +533,7 @@ p[style="font-size:46px"] {
     color: #4242D4;
 }
 .search_form_two .docoment .input-group .ddoc-doc-ajax-search{
-	background: #4242D4;
+	background: #102958;
 }
 .categories_inner .list-content .list-group .list-group-item:hover a,.list-content .ddoc-read-more-list a{
 	color: #4242D4;
