--- a/assets/css/ddoc-style.css
+++ b/assets/css/ddoc-style.css
@@ -7,8 +7,8 @@
     line-height: 1.3em!important;
     color: #FFFFFF;
     margin-bottom: 20px!important;
-    font-family: "Montserrat", Sans-serif;
-    font-weight: 500;
+    font-family: "Montserrat", Sans-serif!important;
+    font-weight: 300!important;
 }
 
 /*======================   normal styles    =======================*/
