--- a/assets/css/ddoc-style.css
+++ b/assets/css/ddoc-style.css
@@ -10,6 +10,12 @@
     font-family: "Montserrat", Sans-serif!important;
     font-weight: 500!important;
 }
+.icono-titulo{
+  font-size: 16px;
+  font-weight: 500;
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+}
 
 /*======================   normal styles    =======================*/
 .error-404{
