--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,9 +44,8 @@
 i.fas.fa-circle {
     color: #F906DD;
 }
-.doc-nav-list > li:hover > a {
-    color: #08285B!important;
-    font-weight: 500!important;
+.doc-nav-list li a img {
+    display: none!important;
 }
 
 /*Categorias*/
