--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14018,8 +14018,10 @@ dl dd a:hover {
 }
 .doc-nav-list li ul li {
   position: relative;
-  padding: 10px;
-  margin: 0;
+  padding: 6px;
+  margin-bottom: 4px;
+  background: #E1E6EE;
+  border-radius: 4px;
 }
 .doc-nav-list li ul li a {
   display: block;
