--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,9 @@ i.fas.fa-circle {
     color: white;
 }
 .doc-nav-list li.wd-state-open > a {
-    color: red;
+    color: white;
+    background: #102958;
+    padding: 4px 8px;
 }
 .doc-nav-list li {
     padding: 6px;
