--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,7 @@ i.fas.fa-circle {
     color: white;
     background: #102958;
     padding: 4px 8px;
+    transition: transform 0.5s;
 }
 .doc-nav-list li {
     padding: 6px;
