--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,9 @@ i.fas.fa-circle {
   border-radius: 4px;
   border-bottom: 1px solid lightgray;
 }
-
+.doc-nav-list li.wd-state-open > a > .wedocs-icon {
+    color: white;
+}
 
 
 /*Categorias*/
@@ -101,9 +103,6 @@ i.fas.fa-circle {
 .wedocs-breadcrumb li a {
     color: #08285B;
     text-decoration: none;
-}
-.doc-nav-list li.wd-state-open > a > .wedocs-icon {
-    color: black;
 }
 .doc-nav-list li ul li a:before {
     display: none;
