--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,9 @@
 i.fas.fa-circle {
     color: #F906DD;
 }
+.wedocs-icon-angle-down:before {
+    content: '\f067';
+}
 
 /*Sidebar Menu*/
 .doc-nav-list li a img {
