--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,7 @@ i.fas.fa-circle {
     padding: 4px 8px;
     transform: scale(1.1);
     transition: transform 0.5s;
+    border-radius: 4px;
 }
 .doc-nav-list li {
     padding: 6px;
