--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,9 @@ i.fas.fa-circle {
   border-radius: 4px;
   border-bottom: 1px solid lightgray;
 }
+.doc-nav-list li.wd-state-open > a > .wedocs-icon .wedocs-icon-angle-down:before {
+    content: '-';
+}
 .doc-nav-list li.wd-state-open > a > .wedocs-icon {
     color: white;
 }
