--- a/assets/css/ddoc-style.css
+++ b/assets/css/ddoc-style.css
@@ -310,7 +310,7 @@
 	color: #08285B;
 }
 .wp-block-ddoc-block-zoomtext .btn-group button.active{
-	background: #2579FF;
+	background: #102958;
     color: #fff !important;
 }
 .wp-block-ddoc-block-zoomtext .btn-group{
