--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,7 @@ i.fas.fa-circle {
     background: white!important;
     height: 100%;
     margin-right: 10px;
+    margin-bottom: 60px;
 }
 .doc-sidebar-menu .wedocs-sidebar {
     padding-left: 2rem;
