--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,9 @@ i.fas.fa-circle {
   border-radius: 4px;
   border-bottom: 1px solid lightgray;
 }
+.doc-nav-list li.wd-state-open > a > .wedocs-icon {
+    color: white;
+}
 .doc-nav-list > li:hover > a {
 
 }
