--- a/assets/css/ddoc-style.css
+++ b/assets/css/ddoc-style.css
@@ -7,14 +7,14 @@
     line-height: 1.3em!important;
     color: #FFFFFF;
     margin-bottom: 20px!important;
-    font-family: "Montserrat", Sans-serif!important;
+    font-family: "Montserrat", sans-serif!important;
     font-weight: 500!important;
 }
 .icono-titulo{
   font-size: 16px;
   font-weight: 500;
   font-family: 'Montserrat', sans-serif;
-  color: white;
+  color: white!important;
 }
 
 /*======================   normal styles    =======================*/
