--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,14 @@ i.fas.fa-circle {
 .page_item.current_page_parent a {
     color: white;
 }
+.page_item_has_children.current_page_ancestor.current_page_parent.wd-state-closed {
+  color: white;
+  background: #102958;
+  padding: 4px 8px;
+  transform: scale(1);
+  transition: transform 0.5s;
+  border-radius: 4px;
+}
 
 
 /*Categorias*/
