--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,17 @@ i.fas.fa-circle {
 .page_item.current_page_parent a > .wedocs-icon {
     color: white;
 }
+.doc-nav-list .li .page_item .page_item_has_children .current_page_item a{
+  color: white;
+  background: #102958;
+  padding: 4px 8px;
+  transform: scale(1);
+  transition: transform 0.5s;
+  border-radius: 4px;
+}
+
+
+
 .page_item_has_children.current_page_ancestor.current_page_parent.wd-state-closed {
   color: white;
   background: #102958;
