--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,10 @@ i.fas.fa-circle {
   transition: transform 0.5s;
   border-radius: 4px;
 }
-
+.page_item.page_item_has_children.current_page_item ul li a {
+    background: transparent;
+    color: #102958;
+}
 
 
 .page_item_has_children.current_page_ancestor.current_page_parent.wd-state-closed {
