--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14062,6 +14062,16 @@ dl dd a:hover {
   margin-right: 10px;
   margin-top: 3px;
 }
+.doc-nav-list li > a > .wedocs-icon {
+  color: #102958;
+  position: absolute;
+  top: 3px;
+  right: 10px;
+  font-size: 16px;
+  transition: all 0.2s;
+  transform: rotate(0deg);
+  cursor: pointer;
+}
 .doc-nav-list li ul {
   display: none;
   list-style: none;
