--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14156,7 +14156,7 @@ dl dd a:hover {
   height: 2px;
   position: absolute;
   right: 0;
-  background: #0479f7;
+  background: #102958;
   transition: all 0.5s;
 }
 .clickIconLeft .bar:first-child {
