--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14747,7 +14747,7 @@ a:active {
   margin-bottom: 8px;
 }
 .ddoc-single-post .ddoc-page-content ol, .ddoc-single-post .ddoc-page-content ul {
-  padding-left: 18px;
+  padding-left: 2rem;
 }
 .ddoc-single-post .ddoc-page-content ol li, .ddoc-single-post .ddoc-page-content ul li {
   margin-bottom: 7px;
