--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -471,8 +471,8 @@ sup {
 }
 
 a {
-  color: #0d6efd;
-  text-decoration: underline;
+  color: #102958;
+  text-decoration: none;
 }
 a:hover {
   color: #0a58ca;
