--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,7 +170,12 @@ i.fas.fa-circle {
   transition: transform 0.5s;
   border-radius: 4px;
 }
-
+.page_item_has_children.current_page_ancestor.current_page_parent a {
+    color: white;
+    background: #102958;
+    padding: 4px 8px;
+    border-radius: 4px;
+}
 
 /*Tabs*/
 .dt_doc_tab_content .nav-tabs li.nav-item a.nav-link {
