--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,16 +170,14 @@ i.fas.fa-circle {
   transition: transform 0.5s;
   border-radius: 4px;
 }
-.page_item_has_children.current_page_ancestor.current_page_parent a:first-of-type {
+
+.doc-nav-list li.current_page_parent > a {
     color: white;
     background: #102958;
     padding: 4px 8px;
+    transform: scale(1);
+    transition: transform 0.5s;
     border-radius: 4px;
-}
-
-.page_item_has_children.current_page_ancestor.current_page_parent a > .wedocs-icon:first-of-type {
-    color: white;
-    top: 8px;
 }
 
 /*Tabs*/
