--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,7 +175,9 @@ i.fas.fa-circle {
     transition: transform 0.5s;
     border-radius: 4px;
 }
-
+.doc-nav-list li.current_page_parent > a > .wedocs-icon {
+    color: white;
+}
 
 /*Tabs*/
 .dt_doc_tab_content .nav-tabs li.nav-item a.nav-link {
